drbd8 (2:8.3.11-1) unstable; urgency=low

  * New upstream release.
  * Switch to dpkg-source 3.0 (quilt) format

 -- Philipp Hug <hug@hug-macbook>  Tue, 20 Mar 2012 12:12:57 +0100

drbd8 (2:8.3.10-1) unstable; urgency=low

  * New upstream release. (Closes: #635329)
  * Moved to git.debian.org for package maintenance.
  * Removed dpatch

 -- Philipp Hug <debian@hug.cx>  Thu, 28 Jul 2011 16:42:04 +0200

drbd8 (2:8.3.9-1) unstable; urgency=low

  * New upstream release.

 -- Norbert Tretkowski <norbert@tretkowski.de>  Thu, 13 Jan 2011 15:36:21 +0100

drbd8 (2:8.3.8.1-1) unstable; urgency=low

  * New upstream release. (closes: #590814)
  * Remove no longer required files.
  * Drop docbook-utils from build-dependencies.
  * Drop architecture independant parts.

 -- Norbert Tretkowski <norbert@tretkowski.de>  Sun, 29 Aug 2010 15:57:31 +0200

drbd8 (2:8.3.7-2.1) unstable; urgency=low

  * Non-maintainer upload.
  * Use the init script of the 8.3.8.1 release fixing broken LSB headers.
    (closes: #576901)

 -- Alexander Reichle-Schmehl <tolimar@debian.org>  Thu, 15 Jul 2010 14:03:40 +0200

drbd8 (2:8.3.7-2) unstable; urgency=low

  * Drop -source package, now that DRBD is part of the Linux mainline kernel.
    (closes: #573514, #580184)

 -- Norbert Tretkowski <norbert@tretkowski.de>  Thu, 10 Jun 2010 20:29:40 +0200

drbd8 (2:8.3.7-1) unstable; urgency=low

  * New upstream release.
    + Correct dependencies in init.d script. (closes: 547566, #563783)
  * Acknowledge NMU of 2:8.3.4-1.1, thanks Iustin for taking care of this!
    (closes: #499516)
  * Ship scripts/adjust_drbd_config_h.sh and run it before building the kernel
    module. (closes: #551479, #552439)

 -- Norbert Tretkowski <norbert@tretkowski.de>  Mon, 18 Jan 2010 16:29:43 +0100

drbd8 (2:8.3.4-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix watch file
  * No longer stops the drbd resources on upgrades of the drbd8-utils